# Erste_Investments

./:  pytest.ini  .gitignore  app_functions.py  main.py  pyproject.toml  qodana.yaml
.github/workflows/: CI_Pipeline.yml  black.yml  ci.yml  coverage.yml  pytest.yml  python_ci.yml  qodana.yml  setup_poetry.yml
database/: create_db.py
db_scripts/: create_db.py  modify_db.py
gui/: common_functions.py  create_gui_functions.py  gui.py  gui_called_functions.py  gui_functions.py  menu_config.py  menu_helper.py  styling.py
tests/: cov.syspath.txt  test_commonGUIFunctions.py  test_common_functions.py  test_menu_config.py
