[tool.poetry]
name = "Erste_investments"
version = "0.1.0"
description = ""
authors = ["Your Name <your.email@example.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
PyQt5 = "^5.15"
coverage = "^7.6.0"
pytest = "^8.2.2"
pytest-qt = "^4.0.2"  # Add pytest-qt for PyQt testing
black = "^24.4.2"

[tool.poetry.group.dev.dependencies]
pytest-cov = "^5.0.0"

[tool.coverage.run]
source = ["Erste_investments"]
branch = true


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

